--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_API_ENDPOINT=http://localhost:5000/api
+# REACT_APP_API_ENDPOINT=http://localhost:5000/api
+
+REACT_APP_API_ENDPOINT=https://tulator-be-nustom-nus.vercel.app/api
